--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -17,6 +17,9 @@ a.active hr {
   font-style: normal;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
 @media (max-width: 640px) {
   a.active {
     background-color: black;
